# trading_assistant

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  config.yaml  pyproject.toml  skills-lock.json
analysis/: context_builder.py  daily_triage.py  discovery_prompt_assembler.py  feedback_handler.py  monthly_model_response_parser.py  monthly_model_response_validator.py  monthly_validation_report_builder.py  outcome_reasoning_prompt.py  pr_report_builder.py  prompt_assembler.py  quality_gate.py  response_parser.py  response_validator.py  strategy_engine.py  triage_prompt_assembler.py  triage_response_parser.py  weekly_prompt_assembler.py  weekly_triage.py  wfo_prompt_assembler.py  wfo_report_builder.py
comms/: base_channel.py  bus_events.py  discord_bot.py  discord_renderer.py  dispatcher.py  email_adapter.py  email_renderer.py  message_bus.py  renderer.py  telegram_bot.py  telegram_control_surface.py  telegram_handlers.py  telegram_renderer.py
contracts/: __init__.py  monthly_runner_contract.py  validate_monthly_runner.py
data/: strategy_profiles.yaml
docs/: 2026-05-12-monthly-learning-loop-cleanup-plan.md  trading-assistant-roadmap.md
memory/: heartbeat.md
orchestrator/: agent_preferences.py  agent_runner.py  app.py  backtest_invocation.py  catchup.py  config.py  conversation_tracker.py  cost_tracker.py  data_paths.py  event_stream.py  handlers.py  input_sanitizer.py  invocation_builder.py  jsonl_store.py  latency_tracker.py  lineage_audit.py  market_data_jobs.py  memory_consolidator.py  monitoring.py  orchestrator_brain.py  permission_gates.py  provider_auth.py  provider_cooldown.py  repo_task_runner.py  run_index.py  scheduled_runs.py  scheduler.py  session_store.py  (+7 more)
(+573 files in other folders)
