[project]
name = "trading-assistant"
version = "0.1.0"
description = "Trading Assistant Agent System — Core Infrastructure"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "aiosqlite>=0.21.0",
    "apscheduler>=3.11.0",
    "httpx>=0.28.0",
    "pyyaml>=6.0",
    "tzdata>=2024.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-httpx>=0.35.0",
    "pytest-xdist>=3.5.0",
    "ruff>=0.9.0",
]

[tool.setuptools.packages.find]
include = ["orchestrator*", "schemas*", "skills*", "analysis*", "comms*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-n auto --dist loadfile"
filterwarnings = [
    "ignore:'audioop' is deprecated:DeprecationWarning",
]

[tool.ruff]
target-version = "py312"
line-length = 100
